--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <h1>Hello World</h1>
         <p>Que bom ter você por aqui</p>
     </header>
+
     <section>
-      
+        <h2>html</h2>
+      <p>Hypertext Markup language (em português, linguagem de marcacação de...)</p>
     </section>
     <footer>
      
