--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <section>
         <h2>html</h2>
       <p>Hypertext Markup language (em português, linguagem de marcacação de...)</p>
+      <h2>CSS</h2>
+      <P>Cascading Style Sheets (em português,folha de Estilo em Cascata)...</P>
     </section>
     <footer>
-     
+    <p>Uma página desenvolvida por Alura start</p> 
     </footer>
 </body>
 </html>
