--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>  
+    <title>Hello World</title>
 </head>
- <body>
+
+<body>
     <header>
         <h1>Hello World</h1>
         <p>Que bom ter você por aqui</p>
@@ -13,12 +15,14 @@
 
     <section>
         <h2>html</h2>
-      <p>Hypertext Markup language (em português, linguagem de marcacação de...)</p>
-      <h2>CSS</h2>
-      <P>Cascading Style Sheets (em português,folha de Estilo em Cascata)...</P>
+        <p>Hypertext Markup language (em português, linguagem de marcacação de...)</p>
+        <h2>CSS</h2>
+        <P>Cascading Style Sheets (em português,folha de Estilo em Cascata)...
+        </P>
     </section>
     <footer>
-    <p>Uma página desenvolvida por Alura start</p> 
+        <p>Uma página desenvolvida por Alura start</p>
     </footer>
 </body>
+
 </html>
