--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>hello Word</title>
+
 </head>
 
-<body>
-    <header>
-        <h1>Hello World</h1>
+<body>www
+
+    <head>
+        <h1>hello World</h1>
         <p>Que bom ter você por aqui</p>
-    </header>
+    </head>
 
     <section>
         <h2>html</h2>
-        <p>Hypertext Markup language (em português, linguagem de marcacação de...)</p>
-        <h2>CSS</h2>
-        <P>Cascading Style Sheets (em português,folha de Estilo em Cascata)...
-        </P>
+        <p>hypertext markup language (em portugues, linguagem de marcação de...)
+        </p>
+        <h2>css</h2>
+        <p>cascadimg Style sheets ( em portugues, folha de Estilo em cascata)...)
+        </p>
+        <img src="imagem/Olá Mundo.png" alt="imagem DOCTYPE um globo mundi com o titulo Hello World">
     </section>
     <footer>
-        <p>Uma página desenvolvida por Alura start</p>
+        <p>Uma pagina desenvolvida por alura start</p>
     </footer>
+
+
 </body>
 
-</html>00
+</html>
