--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello Word</title>
-
+     <link rel="Styleheet" href="style.css"
 </head>
 
 <body>www
