--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="Styleheet" href="style.css"
 </head>
 
-<body>www
+<body>
 
     <head>
         <h1>hello World</h1>
@@ -16,7 +16,7 @@
     </head>
 
     <section>
-        <h2>html</h2>
+        <h2>html</h2><link rel="Style"
         <p>hypertext markup language (em portugues, linguagem de marcação de...)
         </p>
         <h2>css</h2>
