--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
 
     <section>
-        <h2>html</h2><link rel="Style"
+        <h2>html</h2>
         <p>hypertext markup language (em portugues, linguagem de marcação de...)
         </p>
         <h2>css</h2>
