--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello Word</title>
-     <link rel="Styleheet" href="style.css"
-</head>
+    <link rel="Styleheet" href="style.css" </head>
 
 <body>
 
@@ -20,8 +19,7 @@
         <p>hypertext markup language (em portugues, linguagem de marcação de...)
         </p>
         <h2>css</h2>
-        <p>cascadimg Style sheets ( em portugues, folha de Estilo em cascata)...)
-        </p>
+        <p>cascadimg Style sheets ( em portugues, folha de Estilo em cascata)...)</p>
         <img src="imagem/Olá Mundo.png" alt="imagem DOCTYPE um globo mundi com o titulo Hello World">
     </section>
     <footer>
