--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <head>
         <h1>hello World</h1>
-        <p>Que bom ter você por aqui</p>
+        <p>Que bom ter você por aqui <span id="nome-usuário">usuário</span></p>
     </head>
 
     <section>
