--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h2>css</h2>
         <p>cascadimg Style sheets ( em portugues, folha de Estilo em cascata)...)</p>
         <h2>outras linguagem</h2>
-        <li> id="lista">Lista</li>
-        <h2>Alunos</h2>
+        <li> id="lista">lista</li>
+        <h2>aluno</h2>
         <li> id="aluno"></li>
         <img src="imagem/Olá Mundo.png" alt="imagem DOCTYPE um globo mundi com o titulo Hello World">
     </section>
