--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello Word</title>
-    <link rel="Stylesheet" href="style.css" 
-
+    <title>Hello World</title>
+    <link rel="Stylesheet" href="style.css">
+  
+</head>
 <body>
-
-    <head>
-        <h1>hello World</h1>
-        <p>Que bom ter você por aqui <span id="nome-usuário">usuário</span></p>
-    </head>
-
+    <header>
+        <h1> Hello World</h1>
+        <p>Que bom ter você por aqui <samp id="nome-usuário">Usuário</samp></p>
+    </header>
     <section>
-        <h2>html</h2>
-        <p>hypertext markup language (em portugues, linguagem de marcação de...)
-        </p>
-        <h2>css</h2>
-        <p>cascadimg Style sheets ( em portugues, folha de Estilo em cascata)...)</p>
-        <h2>outras linguagem</h2>
-        <li> id="lista">lista</li>
-        <h2>aluno</h2>
-        <li> id="aluno"></li>
-        <img src="imagem/Olá Mundo.png" alt="imagem DOCTYPE um globo mundi com o titulo Hello World">
+        <h2>HTML</h2>
+        <P>Hypertext Markup Languages (em português, Linguagem de Marcação de)...</P>
+        <h2> CSS</h2>
+        <P>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</P>
+        <h2>Outras Linguagens</h2>
+        <li id="lista">Lista</li>
+        <h2>Alunos</h2>
+        <li id="aluno"></li>
+         <img src="imagens/Olá Mundo.png" alt="iamgem DOCTYPE um globo mundi com o título">
     </section>
     <footer>
-        <p>Uma pagina desenvolvida por alura start</p>
+        <p>Uma página desenvolvida por Alura Start</p>
+
     </footer>
 
-
+    
 </body>
-
 </html>
