--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li id="lista">Lista</li>
         <h2>Alunos</h2>
         <li id="aluno"></li>
-         <img src="imagens/Olá Mundo.png" alt="iamgem DOCTYPE um globo mundi com o título">
+         <img src="imagem/Olá Mundo.png" alt="iamgem DOCTYPE um globo mundi com o título">
     </section>
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
